# Head_pose_estimation

./: CMakeLists.txt  TODO.txt
include/: CrossValidation.h  DatabaseParser.h  ETHZParser.h  Feature.h  Forest.h  ForestDetector.h  ForestEnv.h  ForestException.h  Leaf.h  MeanShift.h  Patch.h  PointFeature.h  RectFeature.h  ThreadManager.h  TrainingSet.h  Tree.h
pyViewer/: Viewer.py  Viewer.py~  main.py  main.py~  viewer.py~
src/: Forest.cpp  ForestDetector.cpp  ForestEnv.cpp  ForestException.cpp  Leaf.cpp  Patch.cpp  ThreadManager.cpp  TrainingSet.cpp  Tree.cpp
src/Features/: Feature.cpp  PointFeature.cpp  RectFeature.cpp
src/crossValidation/: CrossValidation.cpp
src/databaseParsers/: DatabaseParser.cpp  ETHZParser.cpp
src/tools/: MeanShift.cpp
tempo/: converter.sh  converterNeg.sh  neg.xml  pos.xml
